Remove shell spacing and padding

--- a/style/index.css
+++ b/style/index.css
@@ -5,10 +5,10 @@ body {
 
 #main {
   position: absolute;
-  top: 4px;
-  left: 4px;
-  right: 4px;
-  bottom: 4px;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 #top-panel {
