--- a/style/index.css
+++ b/style/index.css
@@ -81,11 +81,10 @@ iframe {
 
 #p5-splash {
   z-index: 10000;
-  width: 20%;
-  height: 20%;
   position: absolute;
-  top: 40%;
-  left: 40%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.75);
   opacity: 0;
 }
 
@@ -116,10 +115,7 @@ iframe {
 }
 
 @keyframes zoom-in {
-  0% {
-    transform: scale(1, 1);
-  }
   100% {
-    transform: scale(10, 10);
+    transform: translate(-50%, -50%) scale(10);
   }
 }
